# protecc

./: .gitignore  pyproject.toml
protecc/: OPTIMIZATION.md  prototyping.ipynb
